SFS-2622 Image dots on mobile "about us" need to have the correct about of spacing between them (there is also too much space between the dots and the image title text above it).

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -107,6 +107,9 @@
             line-height: 21px;
             text-align: center;
             padding: 20px 0;
+            @media screen and (max-width: 768px){
+                padding-bottom: 10px !important;
+            }
         }
 
         .process2{
@@ -355,3 +358,4 @@
 }
 
 .remove-margin{margin-bottom: 0 !important;}
+
